@@ -1648,7 +1648,7 @@
 </script>
 
 <script type="text/html" id="stat-template">
-    <span data-bind="text: parseFloat(hero[stat]()).toString()"></span><span data-bind="html: $root.getDiffText(hero.diff[stat]()), css: {'diffPos': hero.diff[stat]() > 0, 'diffNeg': hero.diff[stat]() < 0}, visible: hero.showDiff"></span>
+    <span data-bind="text: parseFloat(hero[stat]()).toString()"></span><span data-bind="html: $root.getDiffText(hero.diff[stat]()), diffCss: hero.diff[stat], diffCssStat: stat, visible: hero.showDiff"></span>
 </script>
 
 <script type="text/html" id="stats-additional-template">
